config/ingress/monitoring-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
  # - host: grafana.local
  #   http:
  #     paths:
  #     - path: /
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: monitoring-grafana
  #           port:
  #             number: 80
  # - host: prometheus.local
  #   http:
  #     paths:
  #     - path: /
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: monitoring-kube-prometheus-prometheus
  #           port:
  #             number: 9090
  - host: signoz.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: signoz
            port:
              number: 8080
  - host: collector.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: signoz-otel-collector
            port:
              number: 4318
  - host: signozmcp.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: signoz-mcp-server
            port:
              number: 8000
